Added Grids to html and css

--- a/src/style.css
+++ b/src/style.css
@@ -8,14 +8,27 @@ body {
   margin: 0 auto;
 }
 
+.img-responsive {
+  max-width: 100%;
+}
+
 .grid {
   display: grid;
+  grid-gap: 64px;
+}
+
+.grid-2-column {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 header {
@@ -64,12 +77,43 @@ header a {
   background: white;
 }
 
+main {
+  background-color: white;
+}
+
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+
+main h3 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  color: #272044;
+}
+
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
+}
+
 footer {
   color: white;
   background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/062/096/original/marseillenight.jpeg?1673298200);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 0;
 }
 
 footer h3 {
@@ -82,7 +126,6 @@ footer p {
   font-weight: 400;
   font-size: 16px;
   opacity: 0.7;
-  margin-right: 20px;
   line-height: 24px;
 }
 
@@ -117,4 +160,13 @@ header h2 {
 
 header h3 {
   font-size: 12px;
+}
+
+.grid {
+  grid-template-columns: 1fr;
+  grid-gap: 32px;
+}
+
+section {
+  padding: 30px;
 }
