--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ body {
 }
 
 .btn {
-  display: inline-block;
+  display: block;
   color: white;
   font-weight: 700;
   font-size: 14px;
@@ -56,15 +56,13 @@ body {
   text-align: center;
   letter-spacing: 3px;
   text-transform: uppercase;
-  padding: 10px 20px;
+  padding: 16px;
   background-color: #00bbf0;
   text-decoration: none;
   border-radius: 5px;
   border: 1px solid #00bbf0;
   transition: 0.5s ease-in-out;
-  margin: 10px 0;
   margin-top: auto;
-  align-self: flex-start;
 }
 
 .btn:hover {
@@ -79,7 +77,7 @@ section {
 }
 
 section.secondary {
-  background-color: #f8f8f8;
+  background: #f8f8f8;
 }
 
 header {
