--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,24 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.image-grid {
+  --gap: 16px;
+  grid-template-columns: 4;
+  --row-height: 400px;
+  box-sizing: border-box;
+  padding: var(--gap);
+  display: grid;
+  grid-template-columns: repeat(var(--num-cols), 1fr);
+  grid-auto-rows: var(--row-height);
+  gap: var(--gap);
+}
+
+.image-grid > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .card {
   background: white;
   margin: 30px 0;
@@ -272,4 +290,10 @@ section {
 
 .embed {
   aspect-ratio: 16/9;
+}
+
+.image-grid {
+  --gap: 16px;
+  --num-cols: 1;
+  --row-height: 150px;
 }
