--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.grid-3-columns-with-first-narrow {
+.grid-3-column-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
@@ -54,7 +54,29 @@ body {
 
 .card {
   background: white;
-  margin: 30px 0;
+  max-width: 1000px ;
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: repeat();
+  gap: 20px;
+  font-family: "Poppins", sans-serif;
+
+}
+
+.card {
+  box-shadow: 0 0 3px rgba(0,0,0,0.1);
+}
+
+.card-image {
+width: 100%;
+display: block;
+}
+
+.card-content {
+  line-height: 1.5;
+  font-size: 0.9em;
+  padding: 15px;
+  background: #f8f8f8;
 }
 
 .card-header.grid {
@@ -195,24 +217,6 @@ main p {
   line-height: 1.5;
   color: #272044;
   opacity: 0.7;
-}
-
-.img-Palais-Longchamp {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.img-Notre-Dame {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.img-bakeryname {
-  width: 100%;
-  height: 100%; 
-  display: block;
 }
 
 .embed {
