--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ body {
   box-sizing: border-box;
   padding: var(--gap);
   display: grid;
-  grid-template-columns: repeat(var(--num-cols), 1fr);
+  grid-template-columns: repeat(var(--num-cols), 1fr 1fr 1fr);
   grid-auto-rows: var(--row-height);
   gap: var(--gap);
 }
